# devutils

./: README.md  eslint.config.mjs  knip.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: tauri-build.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: globals.css  layout.tsx  page.tsx
claudedocs/: deploy-roulette-fix.md
components/: boss-mode-listener.tsx  command-palette.tsx  settings-dialog.tsx  tab-bar.tsx  tool-content.tsx  tool-sidebar.tsx
components/tools/: ascii-art-cork.tsx  base64-tool.tsx  blame-intern.tsx  boss-mode.tsx  click-saver.tsx  color-picker.tsx  cron-generator.tsx  curl-converter.tsx  data-converter.tsx  deploy-roulette.tsx  hash-generator.tsx  jwt-decoder.tsx  jwt-toothpick.tsx  lorem-ipsum-tweezers.tsx  port-detective.tsx  qr-code-tool.tsx  regex-tester.tsx  ssl-toothbrush.tsx  tcp-udp-whistle.tsx  timestamp-converter.tsx  websocket-fish-scaler.tsx
components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  (+5 more)
hooks/: use-copy-animation.ts
lib/: api.ts  click-tracker.ts  deploy-stats-store.ts  i18n.ts  settings-store.ts  tab-store.ts  tauri.ts  tools-meta.ts
messages/: cn.json  en.json  zh-TW.json  zh.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs  main.rs
(+3 files in other folders)
