[package]
name = "devutils"
version = "1.0.0"
description = "DevUtils - Developer Utilities Desktop Application"
authors = ["miyukiyue"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "devutils_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
image = "0.25"
tokio = { version = "1.49.0", features = ["rt", "net", "time", "io-util"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
x509-parser = "0.16"
chrono = "0.4"
url = "2.5"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
time = "0.3"
